<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/soft_blue">

    <TextView
            android:id="@+id/tvSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_35"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="-6sp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_36"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sign_in"/>

    <LinearLayout
            android:id="@+id/containerSignInInputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indentation_16"
            android:layout_marginTop="@dimen/indentation_32"
            android:layout_marginEnd="@dimen/indentation_16"
            android:background="@drawable/common_back_auth_inputs"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignInLabel">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indentation_16"
                android:layout_marginStart="@dimen/indentation_16"
                android:layout_marginEnd="@dimen/indentation_16">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="@dimen/txt_size_16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indentation_26"
                android:layout_marginStart="@dimen/indentation_16"
                android:layout_marginEnd="@dimen/indentation_16">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textSize="@dimen/txt_size_16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/tvSignInForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/indentation_20"
                android:layout_marginEnd="@dimen/indentation_20"
                android:layout_marginBottom="@dimen/indentation_18"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/txt_size_12"
                android:text="@string/forgot_your_password"/>
    </LinearLayout>

    <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/indentation_16"
            android:layout_marginTop="@dimen/indentation_12"
            android:layout_marginRight="@dimen/indentation_16"
            android:background="@drawable/common_back_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_in"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/txt_size_14"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/containerSignInInputs"/>

    <TextView
            android:id="@+id/tvSignInSocialLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_50"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.01"
            android:textColor="@color/text_color_label"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            android:text="@string/you_can_sign_in_with"/>


    <ImageView
            android:id="@+id/btnSignInFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_16"
            android:src="@mipmap/facebook_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignInSocialLabel"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/tvSignInNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/indentation_30"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.01"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_12"
                android:textStyle="normal"
                android:text="@string/dont_have_an_account"/>

        <TextView
                android:id="@+id/tvSignInSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_10"
                android:layout_marginBottom="@dimen/indentation_30"
                android:background="@color/text_color_blue"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorWhite"
                android:textStyle="normal"
                android:text="@string/sign_up"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/iv_sign_in_google"
            android:layout_width="@dimen/view_params_36"
            android:layout_height="@dimen/view_params_36"
            app:layout_constraintTop_toBottomOf="@id/btnSignInFacebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/indentation_8"
            android:background="@mipmap/google_auth"
            app:buttonSize="icon_only"/>

</androidx.constraintlayout.widget.ConstraintLayout>